--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@wordpress/block-editor": "^14.14.0",
     "@wordpress/block-library": "^9.19.0",
     "@wordpress/components": "^29.5.0",
+    "html2pdf.js": "^0.10.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
