--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "@wordpress/block-editor": "^14.14.0",
     "@wordpress/block-library": "^9.19.0",
     "@wordpress/components": "^29.5.0",
