--- a/package.json
+++ b/package.json
@@ -6,15 +6,20 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "server": "node server/parse-resume.js",
+    "dev:all": "concurrently \"npm run dev\" \"npm run server\""
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
     "@wordpress/block-editor": "^14.14.0",
     "@wordpress/block-library": "^9.19.0",
     "@wordpress/components": "^29.5.0",
+    "concurrently": "^8.2.2",
+    "dotenv": "^16.4.7",
     "html2pdf.js": "^0.10.3",
+    "openai": "^4.87.3",
     "pdfjs-dist": "^4.10.38",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
