--- a/server/package.json
+++ b/server/package.json
@@ -1,19 +1,18 @@
 {
   "name": "resume-parser-server",
   "version": "1.0.0",
-  "description": "Node.js server for parsing PDF resumes",
+  "description": "Server for parsing resume PDFs with OpenAI integration",
   "main": "parse-resume.js",
+  "type": "commonjs",
   "scripts": {
-    "start": "node parse-resume.js",
-    "dev": "nodemon parse-resume.js"
+    "start": "node parse-resume.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
+    "openai": "^4.0.0",
     "pdf-parse": "^1.1.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
   }
-} 
+}
