--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "formidable": "^3.5.2",
     "multer": "^1.4.5-lts.1",
     "openai": "^4.0.0",
-    "pdf-parse": "^1.1.1"
+    "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^4.10.38"
   }
 }
