--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,7 @@
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "next-connect": "^1.0.0",
-    "pdf-parse": "^1.1.1"
+    "pdfjs-dist": "^4.0.189"
   },
   "type": "module"
 } 
