--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview",
     "server": "node server/parse-resume.js",
     "dev:all": "concurrently \"npm run dev\" \"npm run server\"",
-    "setup-api": "cd api && npm install"
+    "setup-api": "cd api && npm install && npm install pdfjs-dist@3.4.120"
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
